--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>My name is Diya Dangol</h1>
-<p>My goal is to establish myself as a dependable and professional web developer by taking on challenges and showcasing my dedication to excellence.</p>
+<p>
+    My goal is to establish myself as a dependable and professional web developer by taking on challenges and showcasing my dedication to excellence.</p>
 </body>
 </html>
